# str0m-test-2

./: Cargo.toml  encoded_frames.json
server/: Cargo.toml
server/src/: encoder.rs  lib.rs  traits.rs
server/src/webrtc/: mod.rs  socket.rs  state.rs
src/: bitrate_measure.rs  encoder.rs  index.html  main.rs
src/webrtc/: mod.rs  socket.rs  state.rs
