[package]
name = "str0m-debug2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
str0m = { git = "https://github.com/algesten/str0m", rev = "c9384f9d9b8a5622446143cb43361dd07058263a" }
crossbeam = "0.8"
rouille = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "*"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
systemstat = "0.2.3"
flume = "0.10"