[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
vpx-encode = { version = "0.6.2", features = ["ffi-generate"] }

str0m = { git = "https://github.com/algesten/str0m", rev = "c9384f9d9b8a5622446143cb43361dd07058263a" }

tokio = { version = "1", features = ["time", "macros"] }
flume = "0.10"
crossbeam = "0.8"
axum = "0.6"
async-trait = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "1"

image = "0.24"

tracing = "*"

parking_lot = "*"
futures = "0.3"
